feat: add initial setup of modulith